@@ -16,7 +16,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.handler.FinremCallbackReques
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DirectionOrder;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DirectionOrderCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DocumentCollectionItem;
@@ -57,6 +56,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType.CONTESTED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.draftorders.review.OrderStatus.APPROVED_BY_JUDGE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.draftorders.review.OrderStatus.PROCESSED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.draftorders.review.OrderStatus.TO_BE_REVIEWED;
@@ -95,7 +95,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
 
     @Test
     void testCanHandle() {
-        assertCanHandle(underTest, CallbackType.ABOUT_TO_SUBMIT, CaseType.CONTESTED, EventType.PROCESS_ORDER);
+        assertCanHandle(underTest, CallbackType.ABOUT_TO_SUBMIT, CONTESTED, EventType.PROCESS_ORDER);
     }
 
     @Test
@@ -122,7 +122,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
 
         List<DirectionOrderCollection> uploadHearingOrder = nullExistingUploadHearingOrder ? null : new ArrayList<>();
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .uploadHearingOrder(uploadHearingOrder)
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
@@ -153,7 +153,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
             DirectionOrderCollection.builder().value(DirectionOrder.builder().uploadDraftDocument(TARGET_DOCUMENT_4).build()).build()
         ));
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(12345678L, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(12345678L, CONTESTED, FinremCaseData.builder()
             .uploadHearingOrder(uploadHearingOrder)
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
@@ -190,7 +190,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         mockDocumentStamping(TARGET_DOCUMENT_2, STAMPED_DOCUMENT_2);
         mockDocumentStamping(TARGET_DOCUMENT_3, STAMPED_DOCUMENT_3);
 
-        when(genericDocumentService.convertDocumentIfNotPdfAlready(ADDITIONAL_DOCUMENT_1, AUTH_TOKEN, String.valueOf(CASE_ID)))
+        when(genericDocumentService.convertDocumentIfNotPdfAlready(ADDITIONAL_DOCUMENT_1, AUTH_TOKEN, CONTESTED))
             .thenReturn(CONVERTED_DOCUMENT_1);
 
         DraftOrderDocReviewCollection test1;
@@ -201,7 +201,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         AgreedDraftOrderCollection test6;
         AgreedDraftOrderCollection test7;
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_1)
@@ -249,19 +249,19 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(3)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), eq(String.valueOf(CASE_ID)));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
 
         //check DraftOrderDocReviewCollection is updated
         assertEquals(STAMPED_DOCUMENT_1, test1.getValue().getDraftOrderDocument());
         assertEquals(PROCESSED, test1.getValue().getOrderStatus());
-        assertEquals(CONVERTED_DOCUMENT_1, test1.getValue().getAttachments().get(0).getValue());
+        assertEquals(CONVERTED_DOCUMENT_1, test1.getValue().getAttachments().getFirst().getValue());
         assertEquals(STAMPED_DOCUMENT_2, test2.getValue().getDraftOrderDocument());
         assertEquals(PROCESSED, test2.getValue().getOrderStatus());
 
         //check AgreedDraftOrderCollection is updated
         assertEquals(STAMPED_DOCUMENT_1, test3.getValue().getDraftOrder());
         assertEquals(PROCESSED, test3.getValue().getOrderStatus());
-        assertEquals(CONVERTED_DOCUMENT_1, test3.getValue().getAttachments().get(0).getValue());
+        assertEquals(CONVERTED_DOCUMENT_1, test3.getValue().getAttachments().getFirst().getValue());
         assertEquals(STAMPED_DOCUMENT_2, test4.getValue().getDraftOrder());
         assertEquals(PROCESSED, test4.getValue().getOrderStatus());
         assertEquals(STAMPED_DOCUMENT_3, test5.getValue().getDraftOrder());
@@ -285,7 +285,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         AgreedDraftOrderCollection test3;
         AgreedDraftOrderCollection test4;
         AgreedDraftOrderCollection test5;
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_1)
@@ -323,7 +323,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(2)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), eq(String.valueOf(CASE_ID)));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
         //Check PsaDocReviewCollection is updated
         assertEquals(STAMPED_DOCUMENT_1, test1.getValue().getPsaDocument());
         assertEquals(PROCESSED, test1.getValue().getOrderStatus());
@@ -350,7 +350,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         AgreedDraftOrderCollection test3;
         AgreedDraftOrderCollection test4;
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_1)
@@ -386,7 +386,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(2)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), any(String.class));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
         //Check PsaDocReviewCollection is updated
         assertEquals(PROCESSED, test1.getValue().getOrderStatus());
         assertEquals(STAMPED_DOCUMENT_1, test1.getValue().getPsaDocument());
@@ -409,7 +409,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
             .isOrderStamped(YesOrNo.YES)
             .uploadDraftDocument(TARGET_DOCUMENT_3).build()).build();
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .uploadHearingOrder(new ArrayList<>(List.of(
                 DirectionOrderCollection.builder().value(DirectionOrder.builder().uploadDraftDocument(TARGET_DOCUMENT_4).build()).build()
             )))
@@ -439,7 +439,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(2)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), eq(String.valueOf(CASE_ID)));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
     }
 
     @Test
@@ -455,7 +455,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
                 .build())
             .build();
         FinremCallbackRequest callbackRequest = FinremCallbackRequestFactory.from(EventType.PROCESS_ORDER, FinremCaseDetails.builder()
-            .caseType(CaseType.CONTESTED)
+            .caseType(CONTESTED)
             .data(caseData));
 
         final var response = underTest.handle(callbackRequest, AUTH_TOKEN);
@@ -481,7 +481,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
                 .build())
             .build();
         FinremCallbackRequest callbackRequest = FinremCallbackRequestFactory.from(EventType.PROCESS_ORDER, FinremCaseDetails.builder()
-            .caseType(CaseType.CONTESTED)
+            .caseType(CONTESTED)
             .data(caseData));
 
         final var response = underTest.handle(callbackRequest, AUTH_TOKEN);
@@ -494,7 +494,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
     }
 
     private void mockDocumentStamping(CaseDocument originalDocument, CaseDocument stampedDocument) {
-        when(genericDocumentService.stampDocument(originalDocument, AUTH_TOKEN, FAMILY_COURT_STAMP, String.valueOf(CASE_ID)))
+        when(genericDocumentService.stampDocument(originalDocument, AUTH_TOKEN, FAMILY_COURT_STAMP, CONTESTED))
             .thenReturn(stampedDocument);
     }
 
